--- a/templates/aclerycen.html
+++ b/templates/aclerycen.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fa" dir="rtl">
+<html lang="en">
 
 <head>
     {% load static %}
@@ -20,61 +20,61 @@
     <script src="{% static 'js/mdb.js' %}"></script>
     <style>
         /* Navigation*/
-
+        
         .scrolling-navbar {
             transition: background .5s ease-in-out, padding .5s ease-in-out;
         }
-
+        
         .top-nav-collapse {
             background-color: #667490!important;
         }
-
+        
         .navbar:not(.top-nav-collapse) {
             background: transparent!important;
         }
-
+        
         footer.page-footer {
             background-color: #667490 !important;
         }
-
+        
         @media only screen and (max-width: 768px) {
             .navbar {
                 background-color: #667490 !important;
             }
         }
         /* Necessary for full page carousel*/
-
+        
         html,
         body,
         .view {
             height: 100%;
         }
         /* Carousel*/
-
+        
         .carousel,
         .carousel-item,
         .carousel-item.active {
             height: 100%;
         }
-
+        
         .carousel-inner {
             height: 100%;
         }
-
+        
         .carousel-item:nth-child(1) {
             background-image: url({% static 'img/2.jpg' %});
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center center;
         }
-
+        
         .carousel-item:nth-child(2) {
             background-image: url({% static 'img/3.jpg' %});
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center center;
         }
-
+        
         .carousel-item:nth-child(3) {
             background-image: url({% static 'img/s.jpg' %});
             background-repeat: no-repeat;
@@ -82,10 +82,10 @@
             background-position: center center;
         }
     </style>
-<nav class="navbar  navbar-expand-lg navbar-dark stylish-color-dark fixed-top scrolling-navbar">
+    <nav class="navbar  navbar-expand-lg navbar-dark stylish-color-dark fixed-top scrolling-navbar">
 
 
-        <a class="navbar-brand order-md-first" href="#">Giresh</a>
+        <a class="navbar-brand order-md-first" href="/indexen">Giresh</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -114,7 +114,7 @@
             <i class="fas fa-globe"> FA</i>
         </a>
     </nav>
-<div class="modal fade" id="modalContactForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal fade" id="modalContactForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header text-center">
@@ -155,7 +155,7 @@
             </div>
         </div>
     </div>
-<div class="modal fade left" id="fullHeightModalRight" style="float: left ; text-align: left" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal fade left" id="fullHeightModalRight" style="float: left ; text-align: left" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 
         <!-- Add class .modal-full-height and then add class .modal-right (or other classes from list above) to set a position to the modal -->
         <div class="modal-dialog modal-full-height modal-left" role="document">
@@ -244,43 +244,47 @@
 
     <!--Carousel Wrapper-->
     <div id="home" class="view jarallax" data-jarallax='{"speed": 0.2}' style="background-image: url({% static 'img/s.jpg' %}); background-repeat: no-repeat; background-size: cover; background-position: center center;">
-            <div class="mask rgba-stylish-light">
-                <div class="container h-100 d-flex justify-content-center align-items-center">
-                    <div class="row pt-5 mt-3">
-                        <div class="col-md-12 mb-3">
-                            <div class="intro-info-content text-center">
-                                <h1 class="display-3 white-text mb-5 wow fadeInDown" data-wow-delay="0.3s"> <a class="yellow-text font-weight-bold"> Acrylics</a></h1>
+        <div class="mask rgba-stylish-light">
+            <div class="container h-100 d-flex justify-content-center align-items-center">
+                <div class="row pt-5 mt-3">
+                    <div class="col-md-12 mb-3">
+                        <div class="intro-info-content text-center">
+                            <h1 class="display-3 white-text mb-5 wow fadeInDown" data-wow-delay="0.3s"> <a class="yellow-text font-weight-bold"> Acrylics</a></h1>
 
-                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-<main>
-    <section class="d-flex justify-content-center" >
-        <div style="width: 50% ; margin-top: 5% ; margin-bottom: 5%">
-        <p>
-Giresh Company has a 30 years record of the production of artistic colors and produces a complete set of artistic colors required by artists. in order to possess extraordinary quality, Pars products always have the approval and trust of artists in different age groups and different needs.        </p>
-        <p>
+    </div>
+    <main>
+        <section class="d-flex justify-content-center">
+            <div style="width: 50% ; margin-top: 5% ; margin-bottom: 5%">
+                <p>
+                    Giresh Company has a 30 years record of the production of artistic colors and produces a complete set of artistic colors required by artists. in order to possess extraordinary quality, Pars products always have the approval and trust of artists in different
+                    age groups and different needs. </p>
+                <p>
 
-The company has dealt with a wide range of acrylic paint as one of the leading producers to produce acrylic paint. acrylic paint is applicable with colored variety on surfaces with different textures and tissues, and presents everything that a painter expects of acrylic paint.</p>
-        <p>
-Very high resistance to light, pure pigments and colour stability, dominance, high brightness and also good combination of color drying and leaving transparent layers of Pars acrylic. The use of bark makes many concessions easily diluted with diluted water and then freeze and water proof.        </p>
-        <p>
-It is possible to put different layers of color together without compromising the existence of layers of color. It affects all types of surfaces such as: canvas, cardboard, fabric, wood, pottery, pottery, and provides a range of visual effects        </p>
-        <p>
-Acrylic can be used as well as oil. With the addition of layers and the volume of color in the next step, we created the large and prominent surfaces. Pars acrylic packaging includes: 6 - 12 - 24 packets in the volume 21 mils of packets 6 and 12 in volume of 37 / 75 mils and 200 individual mils and 500 mils per volume.        </p>
-        <p>
-            The pars can be easily used in the airbrush if it is thick with water. The high concentration of the seeds leads to a glowing surface.
-        </p>
-        <p>
-The striking point that distinguishes Persia from other competitors is the long - lasting properties and high - colour consistency against atmospheric changes that make the production of artistic colors specific to wall paintings at large surfaces.        </p>
-                    <a href="{% static 'img/unnamed.jpg' %}" target="_blank"> <img class="img-fluid z-depth-5  rounded" src="{% static 'img/unnamed.jpg' %}"></a>
-</div>
-    </section>
-</main>
-<footer class="page-footer font-small stylish-color-dark ">
+                    The company has dealt with a wide range of acrylic paint as one of the leading producers to produce acrylic paint. acrylic paint is applicable with colored variety on surfaces with different textures and tissues, and presents everything that a painter
+                    expects of acrylic paint.</p>
+                <p>
+                    Very high resistance to light, pure pigments and colour stability, dominance, high brightness and also good combination of color drying and leaving transparent layers of Pars acrylic. The use of bark makes many concessions easily diluted with diluted
+                    water and then freeze and water proof. </p>
+                <p>
+                    It is possible to put different layers of color together without compromising the existence of layers of color. It affects all types of surfaces such as: canvas, cardboard, fabric, wood, pottery, pottery, and provides a range of visual effects </p>
+                <p>
+                    Acrylic can be used as well as oil. With the addition of layers and the volume of color in the next step, we created the large and prominent surfaces. Pars acrylic packaging includes: 6 - 12 - 24 packets in the volume 21 mils of packets 6 and 12 in volume
+                    of 37 / 75 mils and 200 individual mils and 500 mils per volume. </p>
+                <p>
+                    The pars can be easily used in the airbrush if it is thick with water. The high concentration of the seeds leads to a glowing surface.
+                </p>
+                <p>
+                    The striking point that distinguishes Persia from other competitors is the long - lasting properties and high - colour consistency against atmospheric changes that make the production of artistic colors specific to wall paintings at large surfaces. </p>
+                <a href="{% static 'img/unnamed.jpg' %}" target="_blank"> <img class="img-fluid z-depth-5  rounded" src="{% static 'img/unnamed.jpg' %}"></a>
+            </div>
+        </section>
+    </main>
+    <footer class="page-footer font-small stylish-color-dark ">
 
         <!-- Footer Links -->
         <div class="container text-center text-md-left ">
@@ -387,4 +391,5 @@ The striking point that distinguishes Persia from other competitors is the long 
 
     </footer>
 </body>
+
 </html>
